# Image_guided_Navigation_for_Robotics_Final_Project

./: README.md
Needle_Path_planning/: CMakeLists.txt
Needle_Path_planning/Needle_Path_Planning/: CMakeLists.txt  Needle_Path_Planning.py
Needle_Path_planning/Needle_Path_Planning/Resources/UI/: Needle_Path_Planning.ui
ROS_needle_insert_simulation_ws/devel/: .catkin
ROS_needle_insert_simulation_ws/devel/lib/needle_path_simulation/: move_robot
ROS_needle_insert_simulation_ws/devel/lib/pkgconfig/: moveit_needle_sim.pc  needle_path_simulation.pc
ROS_needle_insert_simulation_ws/devel/share/moveit_needle_sim/cmake/: moveit_needle_simConfig.cmake
ROS_needle_insert_simulation_ws/devel/share/needle_path_simulation/cmake/: needle_path_simulationConfig.cmake
ROS_needle_insert_simulation_ws/src/moveit_needle_sim/launch/: moveit.rviz
ROS_needle_insert_simulation_ws/src/needle_path_simulation/: CMakeLists.txt
ROS_needle_insert_simulation_ws/src/needle_path_simulation/config/: user_parameters.yaml
